--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 /*Custom font*/
 @font-face {
 	font-family: 'RaleWay';
-	src: url('fonts/raleway_thin-webfont.woff') format('woff'),
+	src: url('../fonts/raleway_thin-webfont.woff') format('woff'),
 		/* Pretty Modern Browsers */
-		url('fonts/raleway_thin-webfont.ttf') format('tff');
+		url('../fonts/raleway_thin-webfont.ttf') format('tff');
 	/* Safari, Android, iOS */
 }
 
@@ -52,6 +52,7 @@ body {
 .header-title {
 	margin: 0;
 	font-size: 165%;
+	color: blue;
 }
 
 .header-slogan {
